[ui] z-index fix, added compiled css

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -185,6 +185,7 @@ textarea.form-control {
 	overflow-y: auto;
 	overflow-x: hidden;
 	z-index: 1041;
+	position: initial;
 }
 
 .ui-autocomplete a {
